metadata-retriever/metadata/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Body_Type__c</fullName>
        <label>Body Type</label>
        <picklist>
            <picklistValues>
                <fullName>3 door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People Mover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shooting Brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports Tourer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWB</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Freightliner / Daimler Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuso / Daimler Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Bus &amp; Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Trucks / Daimler Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Vans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Channels__c</fullName>
        <label>Campaign Channels</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Format__c</fullName>
        <label>Campaign Medium</label>
        <picklist>
            <picklistValues>
                <fullName>Dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Objective__c</fullName>
        <label>Campaign Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Offer_Type__c</fullName>
        <label>Campaign Offer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Response_Channels__c</fullName>
        <label>Campaign Response Channels</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Expected_Lead__c</fullName>
        <label>Expected Leads (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Participation__c</fullName>
        <label>Expected Participation (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Registration__c</fullName>
        <label>Expected Registration (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Response_Rate__c</fullName>
        <label>Expected Response Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Frequency_Category__c</fullName>
        <label>Frequency Category</label>
        <picklist>
            <picklistValues>
                <fullName>Adhoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tri Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Campaign_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used only for Campaign Execution record type. To build the sequence of Campaign Executions.</description>
        <label>Previous Campaign Execution</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Consequent Campaign Executions</relationshipLabel>
        <relationshipName>Consequent_Campaign_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Channels__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>MB Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Database</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>S_M_Sub_group__c</fullName>
        <label>S&amp;M Sub-group</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service- Finance- Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scale_Volume__c</fullName>
        <label>Scale/Volume</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Class__c</fullName>
        <label>Vehicle Class</label>
        <picklist>
            <controllingField>Brand__c</controllingField>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fortwo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vito</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprinter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argosy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Century Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coronado 112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coronado SD 114</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coronado 114</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>AllCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Central_Campaign_AU</fullName>
        <active>true</active>
        <label>Central Campaign - AU</label>
    </recordTypes>
    <recordTypes>
        <fullName>Creative_Brief</fullName>
        <active>true</active>
        <label>Creative Brief</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Brief</fullName>
        <active>true</active>
        <label>Data Brief</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Campaign_Brief</fullName>
        <active>true</active>
        <label>Internal Campaign Brief</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Expected_Outcome_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Expected_Response_Rate__c &gt; 1,Expected_Participation__c  &gt; 1,Expected_Registration__c  &gt; 1, Expected_Lead__c  &gt; 1)</errorConditionFormula>
        <errorMessage>Expected Outcome fields should not be more than 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Started_Campaign_can_be_activated</fullName>
        <active>true</active>
        <description>When Status = Planned, Confirmed, Approved, Closed, Cancelled, Active can not be true.
Record Type = CAC CRM, Central Campaign, CAS Campaign</description>
        <errorConditionFormula>NOT(ISPICKVAL( Status , &apos;Started&apos;)) 
&amp;&amp; IsActive
&amp;&amp; (  RecordType.Name = &quot;CAC CRM Campaign&quot; || RecordType.Name = &quot;Central Marketing Campaign&quot; || RecordType.Name = &quot;CAS Marketing Campaign&quot;)
&amp;&amp; $Profile.Name != &apos;IntegrationAPI&apos;</errorConditionFormula>
        <errorDisplayField>IsActive</errorDisplayField>
        <errorMessage>Only Campaign with &quot;Started&quot; status can be activated.</errorMessage>
    </validationRules>
</CustomObject>